syntax = "proto3";

option csharp_namespace = "CleanArchitecture.Proto.Solicitudes";

import "Solicitudes/Models.proto";

service SolicitudesApi {
  rpc GetByIds(GetSolicitudesByIdsRequest) returns (GetSolicitudesByIdsResult);
}
